--- a/source/module_hsolver/test/CMakeLists.txt
+++ b/source/module_hsolver/test/CMakeLists.txt
@@ -153,6 +153,12 @@ AddTest(
   SOURCES parallel_k2d_test.cpp ../parallel_k2d.cpp ../../module_cell/parallel_kpoints.cpp  ../../module_basis/module_ao/parallel_2d.cpp
 )
 
+AddTest(
+  TARGET hsolver_diago_hs_parallel
+  LIBS parameter  ${math_libs} ELPA::ELPA base device MPI::MPI_CXX genelpa psi
+  SOURCES test_diago_hs_para.cpp ../diag_hs_para.cpp ../diago_pxxxgvx.cpp  ../../module_basis/module_ao/parallel_2d.cpp ../diago_elpa.cpp ../diago_scalapack.cpp 
+)
+
 find_program(BASH bash)
 if (ENABLE_MPI)
   add_test(NAME HSolver_cg_parallel
@@ -172,11 +178,11 @@ if (ENABLE_MPI)
           COMMAND ${BASH} diago_lcao_parallel_test.sh
           WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
         )
-  if(ENABLE_PEXSI)
-    add_test(NAME HSolver_LCAO_PEXSI_parallel
-          COMMAND ${BASH} diago_pexsi_parallel_test.sh
-          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    )
-endif()
-endif()
+    if(ENABLE_PEXSI)
+      add_test(NAME HSolver_LCAO_PEXSI_parallel
+            COMMAND ${BASH} diago_pexsi_parallel_test.sh
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+      )
+    endif()
+  endif()
 endif()
